--- a/CSS_advanced/styles/5-style.css
+++ b/CSS_advanced/styles/5-style.css
@@ -1,9 +1,13 @@
 html {
     scroll-behavior: smooth;
+    /* All fonts in the html at 62.5% of their normal size */
+    font-size: 62.5%;
 }
 body {
     color:#161616
     font-family: var(--font-family-base);
+    /*Any fonts in the body set to font-size-medium*/
+    font-size: var(--font-size-medium);
 }
 /*This makes the headings use the same font stack*/
 h1, h2, h3, h4, h5, h6 {
@@ -32,5 +36,9 @@ a {
     /* default text throughout the website unless overridden*/
     --font-family-base: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     --font-family-title: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-
+    --font-size-small: 1.2rem; /* 12px when base is 10px */
+    --font-size-medium: 1.6rem; /* 16px when base is 10px */
+    --font-size-large: 1.8rem; /* 18px when base is 10px */
+    --font-size-x-large: 2.3rem; /* 23px when base is 10px */
+    --font-size-xx-large: 4.8rem; /* 48px when base is 10px */
 }   
