--- a/CSS_advanced/styles/4-style.css
+++ b/CSS_advanced/styles/4-style.css
@@ -2,13 +2,13 @@ html {
     scroll-behavior: smooth;
 }
 body {
-    color:#161616
+    color:#161616;
     font-family: var(--font-family-base);
 }
 /*This makes the headings use the same font stack*/
 h1, h2, h3, h4, h5, h6 {
-    --font-family: var(--font-family-title);
-  }
+    font-family: var(--font-family-title);
+}
 a {
     color:#161616
 }
