--- a/CSS_advanced/styles/10-style.css
+++ b/CSS_advanced/styles/10-style.css
@@ -5,7 +5,7 @@ html {
     font-size: 62.5%; /* Sets the base font size to 10px */
 }
 body {
-    color:#161616
+    color:#161616;
     font-family: var(--font-family-base);
     /*Any fonts in the body set to font-size-medium*/
     font-size: var(--font-size-medium);
@@ -32,7 +32,7 @@ a {
     text-align: var(--section-header-align);
 }
 .section-tagline {
-    color: #D73953
+    color: #D73953;
 }
 :root {
     --color-primary: #d73953;
