--- a/CSS_advanced/styles/13-style.css
+++ b/CSS_advanced/styles/13-style.css
@@ -5,7 +5,7 @@ html {
     font-size: 62.5%; /* Sets the base font size to 10px */
 }
 body {
-    color:#161616
+    color:#161616;
     font-family: var(--font-family-base);
     /*Any fonts in the body set to font-size-medium*/
     font-size: var(--font-size-medium);
@@ -19,7 +19,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
 }
 a {
-    color:#161616
+    color:#161616;
     text-decoration: none;
 }
 /* Visited state for the link */
@@ -35,10 +35,10 @@ a[href]:active {
     background-color: var(--color-light-grey); /* Sets the background color to light grey */
 }
 .visually-hidden {
-    display: none
+    display: none;
 }
 .card-category {
-    color:#D73953
+    color:#D73953;
 }
 .section-header {
     text-align: var(--section-header-align);
