--- a/CSS_advanced/styles/7-style.css
+++ b/CSS_advanced/styles/7-style.css
@@ -9,10 +9,12 @@ body {
     font-family: var(--font-family-base);
     /*Any fonts in the body set to font-size-medium*/
     font-size: var(--font-size-medium);
+    font-weight: var(--font-weight-regular);
 }
 /*This makes the headings use the same font stack*/
 h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-title);
+    font-weight: var(--font-weight-bold);
 }
 a {
     color:#161616
