--- a/CSS_advanced/styles/10-style.css
+++ b/CSS_advanced/styles/10-style.css
@@ -25,10 +25,10 @@ a {
     text-decoration: none;
 }
 .visually-hidden {
-    display: none
+    display: none;
 }
 .card-category {
-    color:#D73953
+    color:#D73953;
 }
 .section-header {
     text-align: var(--section-header-align);
