--- a/CSS_advanced/styles/12-style.css
+++ b/CSS_advanced/styles/12-style.css
@@ -25,10 +25,10 @@ a {
     text-decoration: none;
 }
 .visually-hidden {
-    display: none
+    display: none;
 }
 .card-category {
-    color:#D73953
+    color:#D73953;
 }
 .section-header {
     text-align: var(--section-header-align);
@@ -42,7 +42,7 @@ a {
     color: var(--section-title-color);
 }
 .section-tagline {
-    color: #D73953
+    color: #D73953;
     font-family: var(--font-family-title);
     text-transform: var(--section-tagline-transform);
     font-weight: var(--font-weight-bold);
