--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -89,7 +89,7 @@ a:active {
 /* For the nav class */
 .nav {
     margin: 0;
-    padding: 0;
+    padding: var(--padding-half) 0; /* Sets padding to half of the root element's size for top and bottom */
     list-style: none; /* Removes default list styling */
     text-align: center;
 }
@@ -105,7 +105,7 @@ a:active {
 /* For the nav-link class within the nav class */
 .nav .nav-link {
     display: block;
-    padding: calc(1rem / 2) 1rem; /* Half of the root element for top and bottom, equal to the root element for left and right */
+    padding: var(--padding-half) 1rem; /* Half of the root element for top and bottom, and 1rem for left and right */
 }
 /* Hover state for the nav-link class within the nav class */
 .nav .nav-link:hover {
@@ -151,6 +151,7 @@ a:active {
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0; /* 3 times the root element on the bottom, 0 elsewhere */
     --nav-item-link-hover: var(--color-primary);
+    --padding-half: calc(0.5rem); /* Half of the root element for top and bottom */
 }
 /* Target the .footer class */
 .footer {
