--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -152,7 +152,7 @@ a:active {
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0; /* 3 times the root element on the bottom, 0 elsewhere */
     --nav-item-link-hover: var(--color-primary); /* Example primary color */
-    --padding-half: calc(0.5rem); /* Half of the root element for top and bottom */
+    --padding-half: calc(0.5(var(--font-size-medium))); /* Half of the root element for top and bottom */
     --section-tagline-margin: 0;
 }
 /* Style for .section-tagline class */
@@ -171,14 +171,14 @@ a:active {
   .col-1-3 {
     width: 33.33%;
     float: left;
-    padding: calc(0.5rem); /* Half of the root element, adjust if root font size is different */
+    padding: calc(0.5(var(--font-size-medium))); /* Half of the root element, adjust if root font size is different */
   }
   
   /* Style for .col-1-2 class */
   .col-1-2 {
     width: 50%;
     float: left;
-    padding: calc(0.5rem); /* Half of the root element, adjust if root font size is different */
+    padding: calc(0.5(var(--font-size-medium))); /* Half of the root element, adjust if root font size is different */
   }
 /* Target the .footer class */
 .footer {
