--- a/CSS_advanced/styles/18-style.css
+++ b/CSS_advanced/styles/18-style.css
@@ -7,7 +7,6 @@
 html {
     scroll-behavior: smooth;
     /* All fonts in the html at 62.5% of their normal size */
-    font-size: 62.5%;
     font-size: 62.5%; /* Sets the base font size to 10px */
 }
 body {
@@ -148,11 +147,11 @@ a:active {
     --nav-item-font-family: var(--font-family-title);
     --nav-item-font-weight: var(--font-weight-bold);
     --nav-item-font-size: var(--font-size-medium);
-    --nav-item-letter-spacing: 4rem; /* 4% of the root element */
+    --nav-item-letter-spacing: .04(1.6rem); /* 4% of the root element */
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0; /* 3 times the root element on the bottom, 0 elsewhere */
     --nav-item-link-hover: var(--color-primary); /* Example primary color */
-    --padding-half: calc(0.5(var(--font-size-medium))); /* Half of the root element for top and bottom */
+    --padding-half: calc(0.5(1.6rem)); /* Half of the root element for top and bottom */
 }
 /* Target the .footer class */
 .footer {
