--- a/CSS_advanced/styles/21-style.css
+++ b/CSS_advanced/styles/21-style.css
@@ -195,8 +195,17 @@ footer .copyright {
 footer ul {
     text-align: right;
 }
+.footer-address {
+    color: var(--text-color);
+}
+.social-link {
+    display: block;
+}
+.social-link svg {
+    fill: var(--text-color);
+} 
 .row::after {
     content: "";
     display: table;
     clear: both;
-  }
+}
