Add a dark theme to sections

--- a/CSS_advanced/styles/23-style.css
+++ b/CSS_advanced/styles/23-style.css
@@ -206,7 +206,7 @@ footer ul {
 .social-link {
     display: block;
 }
-.social-link svg {
+.social-link > svg {
     fill: var(--text-color);
 } 
 .row::after {
