--- a/sass_scss/4-nested_class.scss
+++ b/sass_scss/4-nested_class.scss
@@ -1,7 +1,6 @@
-$primary-color: #3D3D3D;
-$red-color: #FF0000;
-
 body {
+  $primary-color: #3D3D3D;
   color: $primary-color; }
   body .red {
-    color: $red-color; }
+    $primary-color: #FF0000;
+    color: $primary-color; }
