--- a/sass_scss/5-nested_child.scss
+++ b/sass_scss/5-nested_child.scss
@@ -1,6 +1,7 @@
 body {
   $primary-color: #3D3D3D;
-  color: $primary-color; }
+  color: $primary-color; 
   body .red {
     $primary-color: #FF0000;
     color: $primary-color; }
+}
