--- a/sass_scss/4-nested_class.scss
+++ b/sass_scss/4-nested_class.scss
@@ -1,7 +1,7 @@
 body {
   $primary-color: #3D3D3D;
   color: $primary-color;
-  body .red {
+  .red {
     $primary-color: #FF0000;
     color: $primary-color; }
 }
