--- a/sass_scss/5-nested_child.scss
+++ b/sass_scss/5-nested_child.scss
@@ -1,7 +1,7 @@
 body {
   $primary-color: #3D3D3D;
   color: $primary-color; 
-  .red {
+  > :first-child.red {
     $primary-color: #FF0000;
     color: $primary-color; }
 }
