--- a/sass_scss/7-nested_deeper.scss
+++ b/sass_scss/7-nested_deeper.scss
@@ -5,5 +5,6 @@ body {
     $font-size: 16px; 
     font-size: $font-size; }
     h1.smaller {
+      $font-size: 12px; 
       font-size: $font-size; }
 }
