--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -370,8 +370,7 @@
   /* Section Latest news
       ============================= */
   
-  .section-latest-news .section-body .row {
-    display: flex;
+  .section-latest-news .row {
     flex-direction: row-reverse;
   }
 
