target about us

--- a/flexbox/9-styles.css
+++ b/flexbox/9-styles.css
@@ -376,9 +376,10 @@
 
     /* Section ABOUT US
       ============================= */
-    
-    [class^='col-'] {
-        align-self: center;
+    .section-about-us {
+        [class^='col-'] {
+            align-self: center;
+        }
     }
   /*** 4. CARD ***/
   
