--- a/flexbox/10-styles.css
+++ b/flexbox/10-styles.css
@@ -353,7 +353,7 @@
   }
 
   .section-hero .section-category {
-    color: white;
+    color: var(--color-white);
     text-transform: uppercase;
   }
   .hero-homepage {
