--- a/accessibility/skip-links/01-styles.css
+++ b/accessibility/skip-links/01-styles.css
@@ -203,8 +203,7 @@ a:active {
   top: 0;
   z-index: 10;
   transform:translateY(-1rem);
-  transition:transform .2s ease-in-out;
-  transition:opacity .2s ease-in-out;
+  transition:transform .2s ease-in-out, opacity .2s ease-in-out;
 }
 .skip-link:focus {
   opacity: 1;
