--- a/form/04-styles.css
+++ b/form/04-styles.css
@@ -141,7 +141,7 @@ label {
   padding: 0 0 .5rem;
 }
 
-input[type="text"], [type="email"], textarea {
+input[type="text"], input[type="email"], textarea {
   position: relative;
   width: 100%;
   padding: 1.2rem;
@@ -152,7 +152,7 @@ input[type="text"], [type="email"], textarea {
   outline: 0;
 }
 
-input[type="text"], [type="email"] {
+input[type="text"], input[type="email"] {
   padding-right: 3rem;
 }
 
