input type spacing

--- a/form/04-styles.css
+++ b/form/04-styles.css
@@ -156,7 +156,7 @@ input[type="text"], input[type="email"] {
   padding-right: 3rem;
 }
 
-input [type="text"]:focus, [type="email"]:focus, textarea:focus {
+input[type="text"]:focus, input[type="email"]:focus, textarea:focus {
   border: .1rem solid var(--color-light-grey);
   background-color: var(--color-light-grey);
 }
