--- a/form/05-styles.css
+++ b/form/05-styles.css
@@ -740,11 +740,10 @@ form {
   color: var(--color-dark-grey);
   font-size: var(--font-size-small);
   max-height: 0;
-  transition:.3s;
+  transition: 0.3s;
   overflow: hidden;
 }
 .form-group:focus-within .form-help {
   max-height: 20rem;
   margin: .4rem 0 0;
-  transition:.3s;
 }
