--- a/form/07-styles.css
+++ b/form/07-styles.css
@@ -837,7 +837,7 @@ textarea:valid:not(:placeholder-shown) {
   z-index: 3;
   transition: width .4s cubic-bezier(0, 0.795, 0, 1);
 }
-.form-search:focus input[type="search"] {
+.form-search input[type="search"]:focus {
   position: relative;
   width: 15rem;
   z-index: 1;
